# Glitter

./: .gitattributes  CMakeLists.txt
Glitter/: CMakeLists.txt
Glitter/Headers/: ExecutionerLight.h  Light.h  LightManager.h  Material.h  Mesh.h  Model.h  ShaderLoader.h  camera.h  glitter.hpp  utils.h
Glitter/Meshes/: fractalTerrain.ply
Glitter/Shaders/: 1.colors.fs  materials.fs  materials_diffuse_map.fs  texture_shader_1.vs
Glitter/Sources/: Executioner.cpp  ExecutionerLight.cpp  LightManager.cpp  Material.cpp  ShaderLoader.cpp  main.cpp  utils.cpp
Projects/: CMakeLists.txt
Projects/Test1/: CMakeLists.txt
Projects/Test2/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/meshLoader/: CMakeLists.txt
Samples/test/: CMakeLists.txt  main.cpp
